k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: dearlink
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: api.dearlink.it
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-proxy
                port:
                  number: 3000
  tls:
  - hosts:
    - api.dearlink.it
    secretName: letsencrypt-nginx
